Fix display on mobiles

--- a/css/main.css
+++ b/css/main.css
@@ -153,13 +153,20 @@ body {
 body {
   background: url("../img/loop.gif") no-repeat center center;
   background-size: cover;
+  background-attachment: fixed;
 }
 
 h1.ccdradio {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  z-index: 200;
+  padding: 20px;
+}
+
+@media only screen and (min-width: 768px) {
+  h1.ccdradio {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    z-index: 200;
+  }
 }
 
 h1.ccdradio a {
@@ -200,18 +207,30 @@ h1.ccdradio a {
   background-size: cover;
 }
 #background .texture {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   background: rgba(0,0,0,0.5) url("/img/pattern.png");
   z-index: 1;
   opacity: 0.5;
 }
+
 #main-nav {
-  position: absolute;
-  bottom: 120px;
-  right: 20px;
+  position: fixed;
+  bottom: 60px;
+  text-align: center;
+  left: 0;
+  right: 0;
 }
+
+@media only screen and (min-width: 768px) {
+  #main-nav {
+    bottom: 120px;
+    right: 20px;
+    left: auto;
+  }
+}
+
 #main-nav a {
   color: #fff;
   text-decoration: none;
@@ -234,58 +253,92 @@ h1.ccdradio a {
   border-color: #fff;
 }
 
-
 #main-nav .spacer {
   margin: 0 20px;
 }
-#main {
-  width: 100%;
-  display: table;
-}
-#main > div {
-  display: table-cell;
-  vertical-align: middle;
+
+#main-content {
   box-sizing: border-box;
   position: relative;
 }
-#main > div .en-construccion {
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-  width: 320px;
+
+@media only screen and (min-width: 768px) {
+  #main {
+    width: 100%;
+    height: 100%;
+    display: table;
+  }
+  #main #main-content {
+    display: table-cell;
+    vertical-align: middle;
+  }
+}
+
+#main .escucha {
+  display: table;
+  height: 100%;
+  width: 100%;
+}
+
+#main .escucha .escucha-btn {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+#main .escucha .en-construccion {
   font-size: 14px;
   text-align: justify;
   text-justify: newspaper;
   hyphens: auto;
+  padding: 20px;
+  width: 380px;
+  box-sizing: border-box;
+  text-align: center;
+  margin: 0 auto;
 }
-#main > div a.escucha-btn {
+
+@media only screen and (min-width: 768px) {
+  #main .escucha .en-construccion {
+    position: absolute;
+    bottom: 100px;
+    text-align: left;
+  }
+}
+
+#main .escucha a.escucha-btn {
+  position: relative;
   display: block;
-  position: absolute;
-  width: 8em;
-  margin-left: -4em;
-  height: 2em;
-  margin-top: -1em;
   line-height: 2em;
-  left: 50%;
-  top: 50%;
   border: 4px solid #fff;
   color: #fff;
   font-size: 24px;
   font-weight: bold;
   text-decoration: none;
   text-align: center;
+  width: 8em;
+  height: 2em;
+  margin: 0 auto;
 }
-#main > div a.escucha-btn audio {
-  display: none;
+
+
+@media only screen and (min-width: 768px) {
+  #main .escucha a.escucha-btn {
+    position: absolute;
+    margin-left: -4em;
+    margin-top: -1em;
+    left: 50%;
+    top: 50%;
+
+  }
 }
-#main > div a.escucha-btn i {
+#main .escucha a.escucha-btn i {
   margin-right: 10px;
 }
-#main > div a.escucha-btn:hover {
+#main .escucha a.escucha-btn:hover {
   color: #000;
   background: #fff;
 }
-#main > div a.escucha-btn .label {
+#main .escucha a.escucha-btn .label {
   display: none;
   padding: 5px;
   box-sizing: border-box;
@@ -297,14 +350,14 @@ h1.ccdradio a {
   bottom: 0;
   width: 100%;
 }
-#main > div a.escucha-btn .label .now-playing {
+#main .escucha a.escucha-btn .label .now-playing {
   position: relative;
   width: 100%;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
 }
-#main > div a.escucha-btn .on-air {
+#main .escucha a.escucha-btn .on-air {
   position: absolute;
   width: 200px;
   padding: 0 20px;
@@ -315,15 +368,23 @@ h1.ccdradio a {
   overflow: hidden;
   color: #fff;
   pointer-events: none;
+  display: none;
 }
-#main > div a.escucha-btn .on-air span {
+
+@media only screen and (min-width: 768px) {
+  #main .escucha a.escucha-btn .on-air {
+    display: block;
+  }
+}
+
+#main .escucha a.escucha-btn .on-air span {
   position: relative;
   left: 200px;
   opacity: 0;
   transition: all ease-in-out 0.5s;
   -webkit-transition: all ease-in-out 0.5s;
 }
-#main > div a.escucha-btn .on-air span:before {
+#main .escucha a.escucha-btn .on-air span:before {
   -webkit-animation-name: 'pulse_opacity';
   -webkit-animation-duration: 5000ms;
   -webkit-transform-origin: 70% 70%;
@@ -361,13 +422,18 @@ body.is-playing #main .escucha i.play {
   display: none;
 }
 
-#main-content {
-  position: relative;
-}
 #main .programacion {
   position: relative;
   margin: 0 auto;
+  padding-bottom: 80px;
 }
+
+@media only screen and (min-width: 768px) {
+  #main .programacion {
+    padding-bottom: 0;
+  }
+}
+
 #main .bio-container {
   position: relative;
   top: 20px;
@@ -465,12 +531,20 @@ body.is-playing #main .escucha i.play {
 #main .programacion .calendario {
   margin: 0 auto;
   width: 900px;
+  max-width: 100%;
 }
 #main .programacion .calendario > div {
-  float: left;
   position: relative;
-  width: 225px;
+  margin-bottom: 40px;
 }
+
+@media only screen and (min-width: 900px) {
+  #main .programacion .calendario > div {
+    float: left;
+    width: 225px;
+  }
+}
+
 #main .programacion .calendario > div h2 {
   padding: 20px;
 }
@@ -480,14 +554,26 @@ body.is-playing #main .escucha i.play {
   display: block;
   position: relative;
   padding: 20px;
-  border: 4px solid #fff;
-  border-bottom: none;
   margin: 0 -2px;
   top: -4px;
+  border-top: 2px solid #fff;
 }
+
 #main .programacion .calendario > div a.show:last-child {
-  border-bottom: 4px solid #fff;
+  border-bottom: 2px solid #fff;
 }
+
+@media only screen and (min-width: 900px) {
+  #main .programacion .calendario > div a.show {
+    border: 4px solid #fff;
+    border-bottom: none;
+  }
+  #main .programacion .calendario > div a.show:last-child {
+    border-bottom: 4px solid #fff;
+  }
+}
+
+
 #main .programacion .calendario > div a.show .time {
   color: #ffb245;
   font-size: 11px;
@@ -496,13 +582,22 @@ body.is-playing #main .escucha i.play {
   font-size: 12px;
 }
 #main .acerca-de .text {
-  max-width: 1100px;
   margin: 0 auto;
-  font-size: 32px;
   line-height: 1.8em;
   text-align: justify;
   text-justify: newspaper;
+  padding: 20px;
+  box-sizing: border-box;
 }
+
+@media only screen and (min-width: 768px) {
+  #main .acerca-de .text {
+    font-size: 32px;
+    max-width: 1100px;
+  }
+
+}
+
 #main .acerca-de .text strong {
   font-weight: bold;
   border-bottom: 3px solid #fff;
